restructure: modified the pom.xml and added the project jar snapshot to a new release folder

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.4.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.ffaustin.jack_lexical_analyzer.Main</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <version>1.0-SNAPSHOT</version>
